--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
     "build": "webpack --config webpack/webpack.config.js",
     "dev": "webpack-dev-server --open --config webpack/webpack.config.js",
     "watch": "webpack --watch --config webpack/webpack.config.js"
@@ -14,13 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "sass-loader": "^8.0.2",
+    "node-sass": "^4.5.3",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
